tests/NormalTests/paczka1/fuzzy1/78606464.err
Error in line 17: EU697LUWmA S571 45,4
Error in line 33: aCjW A385 70,7
